[gd_scene load_steps=3 format=2]

[ext_resource path="res://objects/chars/chica/chicaai.gd" type="Script" id=1]
[ext_resource path="res://audio/kitchen/potspans.wav" type="AudioStream" id=2]

[node name="chica" type="Node2D"]
script = ExtResource( 1 )

[node name="chicaTimer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="killTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="potsnpans" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 2 )

[connection signal="timeout" from="chicaTimer" to="." method="timerUpdate"]
[connection signal="timeout" from="killTimer" to="." method="killTimer"]
